--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':nestscrollingframelayout', ':velocityydemo', 'nestedscrollingrecyclerview'
+include ':nestscrollingframelayout', ':velocityydemo', 'nestedscrollingrecyclerview'
