feat:添加事件分发demo

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':nestscrollingframelayout', ':velocityydemo', 'nestedscrollingrecyclerview'
+include ':nestscrollingframelayout', ':velocityydemo', 'nestedscrollingrecyclerview' , 'TouchEvent'
